--- a/app/styles/settings.colors.scss
+++ b/app/styles/settings.colors.scss
@@ -44,5 +44,8 @@ $red-light:               #F33;
 $green:                   #8BAE00;
 $green-light:             #B3E000;
 
+$orange-dark:             #7a7341;
 $orange:                  #FFC515;
 $orange-light:            #FFE843;
+$orange-lighter:          #f8e974;
+$orange-lightest:         #fff9d5;
